[css] fixup z-index to 1 for over the image

--- a/www.jxck.io/assets/css/header.css
+++ b/www.jxck.io/assets/css/header.css
@@ -1,4 +1,5 @@
 header {
+  z-index: 1;
   position: sticky;
   top: 0;
   box-sizing: border-box;
